--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
-  const pageTitle = "My Astro Learning Blog";
+import '../styles/global.css';
+
+const pageTitle = "My Astro Learning Blog";
 ---
 
 <html lang="en">
