增加每篇post跳转到tag详情页的链接

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -28,7 +28,7 @@ const pageTitle = "Tag Index";
 <BaseLayout pageTitle={pageTitle}>
   <div class="tags">
     {tags.map((tag) => (
-      <p class="tags"><a href={`/tags/${tag}`}>{tag}</a></p>
+      <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
     ))}
   </div>
 </BaseLayout>
